# NeaTS

./: .gitignore  CMakeLists.txt  LeaTS.cpp  NeaTSL.cpp  README.md  SNeaTS.cpp  main.cpp  main_simd.cpp
benchmark/: AdaptiveApproximation.hpp  gp_compressors_bench.hpp  neats_lossless.cpp  st_compressors_bench.hpp
benchmark/Chimp/: CompressorChimp.hpp  DecompressorChimp.hpp
benchmark/Chimp128/: CompressorChimp128.hpp  DecompressorChimp128.hpp
benchmark/Gorilla/: CompressorGorilla.hpp  DecompressorGorilla.hpp
benchmark/TSXor/: CompressorTSXor.hpp  DecompressorTSXor.hpp
benchmark/lib/: BitStream.hpp  Window.hpp  Zigzag.hpp
include/: LeaTS.hpp  NeaTS.hpp  NeaTSL.hpp  PGM-Index.hpp  SNeaTS.hpp  algorithms.hpp  boost_coefficient_space.hpp  boost_pfa.hpp  coefficients_space.hpp  float_coefficient_space.hpp  float_pfa.hpp  my_elias_fano.hpp  piecewise_nonlinear_model.hpp  simple.cpp  utils.hpp
lib/sdsl-lite/: CMakeLists.txt  COPYING  Make.helper  README.md
lib/sdsl-lite/CMakeModules/: AppendCompilerFlags.cmake  Colors.cmake  CompilerFlags.cmake  DetectCPUFeatures.cmake  FindCxaDemangle.cmake  ParseVersionFile.cmake
lib/sdsl-lite/examples/: CMakeLists.txt  bit-vector.cpp  c++11-initializer-list.cpp  construct-in-memory.cpp  csa-alphabet-strategy.cpp  cst-bfs-iterator.cpp  cst-node-child-iterator.cpp  fm-index.cpp  fm-rmq-index.cpp  hugepages.cpp  int-vector-buffer-iterator.cpp  int-vector-buffer.cpp  int-vector-entry.cpp  int-vector-mapper.cpp  intersect.cpp  isa_access.cpp  k2_treap_in_mem.cpp  louds-tree.cpp  mem-vis.cpp  memory-visualization.cpp  node_iterator.cpp  print_wt.cpp  range-minimum-queries.cpp  sa-int-construct-from-file.cpp  sd_vector_benchmark.cpp  standalone_lcp.cpp  storage-visualization.cpp  store_to_file.cpp  text-statistics.cpp  uint64-array2int_vector.cpp  write_structure.cpp  wt_ap.cpp
lib/sdsl-lite/extras/: CMakeLists.txt  Doxyfile.in  pre-commit
lib/sdsl-lite/extras/cheatsheet/: sdsl-cheatsheet.tex
lib/sdsl-lite/include/sdsl/: bit_vector_il.hpp  bit_vectors.hpp  bits.hpp  bp_support.hpp  bp_support_algorithm.hpp  bp_support_g.hpp  bp_support_gg.hpp  bp_support_sada.hpp  coder.hpp  coder_comma.hpp  coder_elias_delta.hpp  coder_elias_gamma.hpp  coder_fibonacci.hpp  construct.hpp  construct_bwt.hpp  construct_isa.hpp  construct_lcp.hpp  construct_lcp_helper.hpp  construct_sa.hpp  construct_sa_se.hpp  csa_alphabet_strategy.hpp  csa_bitcompressed.hpp  csa_sada.hpp  csa_sampling_strategy.hpp  csa_wt.hpp  cst_fully.hpp  cst_iterators.hpp  cst_sada.hpp  cst_sct3.hpp  dac_vector.hpp  divsufsort.hpp  enc_vector.hpp  fast_cache.hpp  hyb_vector.hpp  int_vector.hpp  int_vector_buffer.hpp  int_vector_io_wrappers.hpp  int_vector_mapper.hpp  inv_perm_support.hpp  io.hpp  (+71 more)
lib/sdsl-lite/lib/: CMakeLists.txt  sd_vector.cpp  simple_sds.cpp  structure_tree.cpp  wt_helper.cpp
lib/sdsl-lite/test/: CMakeLists.txt  bit_vector_generator.cpp  bit_vector_test.cpp  bits_test.cpp  coder_test.cpp  compile_test.cpp  csa_byte_test.cpp  csa_int_test.cpp  cst_byte_test.cpp  cst_helper.hpp  cst_int_test.cpp  divsufsort_test.cpp  download_files.cmake  int_vector_buffer_test.cpp  int_vector_generator.cpp  int_vector_mapper_test.cpp  int_vector_test.cpp  inv_perm_support_test.cpp  k2_treap_test.cpp  k2_tree_test.cpp  lcp_construct_test.cpp  nn_dict_dynamic_test.cpp  rank_support_test.cpp  replace_int_vector_value.cpp  rle_vector_test.cpp  rmq_test.cpp  sa_construct_test.cpp  sd_vector_test.cpp  search_bidirectional_test.cpp  select_support_test.cpp  simple_sds_test.cpp  sorted_int_stack_test.cpp  sorted_stack_support_test.cpp  wt_byte_epr_test.cpp  wt_byte_test.cpp  wt_int_test.cpp
lib/sdsl-lite/test/header/: CMakeLists.txt
lib/sdsl-lite/test/performance/: int_vector_end.cpp
lib/sdsl-lite/test/test_cases/: moby.int
lib/sdsl-lite/tutorial/: CMakeLists.txt  cst-search.cpp  cst-traversal.cpp  csx-printf.cpp  expl-01.cpp  expl-02.cpp  expl-03.cpp  expl-04.cpp  expl-05.cpp  expl-06.cpp  expl-07.cpp  expl-08.cpp  expl-09.cpp  expl-10.cpp  expl-11.cpp  expl-12.cpp  expl-13.cpp  expl-14.cpp  expl-15.cpp  expl-16.cpp  expl-17.cpp  expl-18.cpp  expl-19.cpp  expl-20.cpp  expl-21.cpp  expl-22.cpp  expl-23.cpp  expl-24.cpp  expl-25.cpp  expl-26.cpp  int-vector-tutorial.cpp  rmq-example.cpp  use-a-wavelet-tree.cpp
lib/sdsl-lite/tutorial/document_listing/: doc_list_index.cpp
lib/sux/: Doxyfile
test/: test.cpp
(+33 files in other folders)
